--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -22,8 +22,10 @@ header {
     border: solid red 10px;
 } */
 
-.orange {
-    border: solid orange 10px;
+
+.orangeBorderSquare {
+    border: solid orange 15px;
+    box-sizing: border-box;
 }
 
 /* footer {
@@ -31,5 +33,12 @@ header {
 } */
 
 .portfolioImg {
-    width: 200px;
+    max-width: 400px;
+    border: 2px dolid black;
+    margin: auto;
+}
+.card {
+    margin: auto;
+    text-align: center;
+    background-color: white;
 }
